myteo/test/analyze/type_check/binary_operation/bitwise.exp
Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/bitwise.myte:14:7-11
 14 |   (1 & true: Int);
    |        ^^^^

Error: Expected type `Int` but found `Bool`
test/analyze/type_check/binary_operation/bitwise.myte:15:3-7
 15 |   (true & "a": String);
    |    ^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/binary_operation/bitwise.myte:15:10-13
 15 |   (true & "a": String);
    |           ^^^

Error: Expected type `Int` but found `Byte`
test/analyze/type_check/binary_operation/bitwise.myte:21:7
 21 |   (i & b: Int);
    |        ^

Error: Expected type `Byte` but found `Int`
test/analyze/type_check/binary_operation/bitwise.myte:22:7
 22 |   (b & i: Byte);
    |        ^

Error: Expected type `Int` but found `Byte`
test/analyze/type_check/binary_operation/bitwise.myte:25:3-8
 25 |   (1 & b: Int);
    |    ^^^^^

Error: Expected type `Int` but found `Byte`
test/analyze/type_check/binary_operation/bitwise.myte:26:3-8
 26 |   (b & 1: Int);
    |    ^^^^^